--- a/src/Common.Serializer/Common.Serializer.csproj
+++ b/src/Common.Serializer/Common.Serializer.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ISerialize.cs" />
     <Compile Include="Serialization.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Xml\Extensions.cs" />
     <Compile Include="Xml\XmlSerializerAdapter.cs" />
     <Compile Include="SerializationConfiguration.cs" />
     <Compile Include="SerializationContext.cs" />
