--- a/src/Common.Serializer.YamlDotNet/Common.Serializer.Yaml.csproj
+++ b/src/Common.Serializer.YamlDotNet/Common.Serializer.Yaml.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Common.Serializer.Yaml</RootNamespace>
     <AssemblyName>Common.Serializer.Yaml</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
