--- a/src/Common.Serializer/Common.Serializer.csproj
+++ b/src/Common.Serializer/Common.Serializer.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Common.Serializer</RootNamespace>
     <AssemblyName>Common.Serializer</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -49,6 +50,9 @@
     <Compile Include="Xml\XmlSerializerAdapter.cs" />
     <Compile Include="SerializationConfiguration.cs" />
     <Compile Include="SerializationContext.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Common.Serializer.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
