--- a/src/Common.Serializer.YamlDotNet/Common.Serializer.YamlDotNet.csproj
+++ b/src/Common.Serializer.YamlDotNet/Common.Serializer.YamlDotNet.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D7457C09-5438-48F0-B1BE-234226B85133}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Common.Serializer.Yaml</RootNamespace>
-    <AssemblyName>Common.Serializer.Yaml</AssemblyName>
+    <RootNamespace>Common.Serializer.YamlDotNet</RootNamespace>
+    <AssemblyName>Common.Serializer.YamlDotNet</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -54,6 +54,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Common.Serializer.Yaml.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
