--- a/src/Common.Serializer.Tests/Common.Serializer.Tests.csproj
+++ b/src/Common.Serializer.Tests/Common.Serializer.Tests.csproj
@@ -52,6 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryTests.cs" />
     <Compile Include="ConfigTest.cs" />
     <Compile Include="JsonTest.cs" />
     <Compile Include="SerializeMe.cs" />
