added read/write access to streams

--- a/src/Common.Serializer.Tests/Common.Serializer.Tests.csproj
+++ b/src/Common.Serializer.Tests/Common.Serializer.Tests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="BinaryTests.cs" />
     <Compile Include="ConfigTest.cs" />
     <Compile Include="JsonTest.cs" />
+    <Compile Include="SerializationTests.cs" />
     <Compile Include="SerializeMe.cs" />
     <Compile Include="XmlTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
